@@ -64,5 +64,6 @@ bell_style("none") #modes: none, audible, visible(not implemented)
 show_all_if_ambiguous("on")
 mark_directories("on")
 completer_delims(" \t\n\"\\'`@$><=;|&{(")
-#debug_output("on")  #Not implemented yet
-
+debug_output("off")
+history_filename("~/.pythonhistory")
+history_length(200) #value of -1 means no limit
