@@ -29,26 +29,22 @@ description = "A python implmementation of GNU readline."
 
 long_description = \
 """
-The pyreadline package is a python implementation of GNU readline functionality. 
-It is not complete and does not necessarily strive for complete
-compatibilty but rather convenience in use on the windows platform. It has been
-tested for use with windows 2000 and windows xp.
+The pyreadline package is a python implementation of GNU readline functionality
+it is based on the ctypes based UNC readline package by Gary Bishop. 
+It is not complete. It has been tested for use with windows 2000 and windows xp.
 
-There are currently no released version, only subversion access is possible.
-use: easy_install pyreadline==dev
-
-features:
-- Copy and paste using the clipboard
-- Smart paste for convenient use with ipython. Converting tab separated data to 
-  python list or numpy array. Converting file paths to use / and escaping any 
-  spaces using \ .
-- Configuration file
-
+Features:
+ *  Copy and paste using the clipboard
+ *  Smart paste for convenient use with ipython. Converting tab separated data 
+    to python list or numpy array. Converting file paths to use / and escaping 
+    any spaces using \\\\ .
+ *  Configuration file
+ 
  The latest development version is always available at the IPython subversion
  repository_.
 
 .. _repository: http://ipython.scipy.org/svn/ipython/pyreadline/trunk#egg=pyreadline-dev
-"""
+ """
 
 license = 'BSD'
 
@@ -57,10 +53,16 @@ authors = {'Jorgen' : ('Jorgen Stenarson','jorgen.stenarson@bostream.nu'),
            'Jack':    ('Jack Trainor', ''),         
            }
 
-url = 'http://ipython.scipy.org'
+url = 'http://projects.scipy.org/ipython/ipython/wiki/PyReadline/Intro'
 
-download_url = 'http://ipython.scipy.org/dist'
+download_url = ''
 
 platforms = ['Windows XP/2000/NT','Windows 95/98/ME']
 
 keywords = ['readline','pyreadline']
+
+classifiers = ['Development Status :: 4 - Beta',
+               'Environment :: Console',
+               'Operating System :: Microsoft :: Windows',]
+               
+               
