@@ -1,0 +1,5 @@
+# -*- coding: UTF-8 -*-
+#this file is needed in site-packages to emulate readline
+#necessary for rlcompleter since it relies on the existance
+#of a readline module
+from pyreadline import *
