@@ -1,0 +1,3 @@
+[egg_info]
+tag_build=.dev
+tag_svn_revision=1
