@@ -18,12 +18,17 @@ setup(name=name,
       long_description = long_description,
       author           = authors["Jorgen"][0],
       author_email     = authors["Jorgen"][1],
+      maintainer       = authors["Jorgen"][0],
+      maintainer_email = authors["Jorgen"][1],
       license          = license,
+      classifiers      = classifiers,
       url              = url,
-      download_url     = download_url,
+#      download_url     = download_url,
       platforms        = platforms,
       keywords         = keywords,
+      py_modules       = ['readline'],
       packages         = ['pyreadline'],
+      package_data     = {'pyreadline':['configuration/*']},
       data_files       = [('share/doc/pyreadline', glob.glob("doc/*")),
                          ]
       )
